<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detail_movie"
            type="com.example.everypractice.prinoptions.movies.data.domain.TemporaryDetailMovie" />

    </data>

    <ScrollView
        tools:ignore="ContentDescription"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:minHeight="1000dp"
            tools:background="@color/blue_app">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blue_app"
                app:cardCornerRadius="18sp"
                app:cardElevation="5dp"
                app:layout_constraintStart_toStartOf="@+id/guideline14"
                app:layout_constraintTop_toTopOf="@+id/guideline12">

                <ImageView
                    android:id="@+id/iv_poster_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="300dp"
                    android:scaleType="centerInside"
                    tools:src="@drawable/img_poste_sample"
                    app:bindImage="@{detail_movie.posterPathUrl}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView12"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:layout_marginVertical="10dp"
                app:cardBackgroundColor="@color/blue_app"
                android:outlineSpotShadowColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toTopOf="@+id/materialCardView13"
                app:layout_constraintEnd_toStartOf="@+id/guideline15"
                app:layout_constraintStart_toEndOf="@+id/materialCardView10"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintVertical_chainStyle="spread">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_app"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/g_nero"
                        android:textColor="@color/light_gray" />

                    <TextView
                        android:id="@+id/tv_main_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/comedy"
                        android:textColor="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView13"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:outlineSpotShadowColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/blue_app"
                app:layout_constraintBottom_toTopOf="@+id/materialCardView11"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView12"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/materialCardView12"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView12">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_app"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_clock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:textColor="@color/light_gray" />

                    <TextView
                        android:id="@+id/tv_duration_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1h 38m"
                        android:textColor="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView11"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:outlineSpotShadowColor="@color/white"
                app:cardBackgroundColor="@color/blue_app"
                app:cardCornerRadius="12dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/materialCardView10"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView13"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/materialCardView13"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView13">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/blue_app"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textColor="@color/light_gray" />

                    <TextView
                        android:id="@+id/tv_rating_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/rating_sample"
                        android:textColor="@color/white" />
                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="1.0" />

            <TextView
                android:id="@+id/tv_title_detail"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                tools:text="@string/pacific_rim_the_black"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline15"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline14"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView10" />

            <View
                android:id="@+id/v_divisor"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_rounded_shimmer_view"
                app:layout_constraintEnd_toStartOf="@+id/guideline15"
                app:layout_constraintStart_toStartOf="@+id/guideline14"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/synopsis"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/guideline14"
                app:layout_constraintTop_toBottomOf="@+id/v_divisor" />


            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="10dp"
                tools:text="@string/overview_sample"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline15"
                app:layout_constraintHorizontal_bias="0.0"
                android:overScrollMode="never"
                app:layout_constraintStart_toStartOf="@+id/guideline14"
                app:layout_constraintTop_toBottomOf="@+id/textView20"
                />




            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardBackgroundColor="@color/blue_app"
                app:cardCornerRadius="16dp"
                android:layout_marginTop="24dp"
                android:paddingBottom="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_background_path_collection_in_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="matrix"
                        app:bindImage="@{detail_movie.backgroundCollectionPathUrl}"
                        tools:src="@drawable/collection_background_path_sample"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/gradiente_rectangulo_background_collection_path"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_name_colection_in_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:letterSpacing="-0.01"
                        tools:text="Parte de Top Gun - Colecccion"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/btn_see_colection_in_detail"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="spread" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btn_see_colection_in_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/black"
                        app:cardCornerRadius="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_name_colection_in_detail"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name_colection_in_detail">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:letterSpacing="-0.05"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="6dp"
                            android:text="@string/ver_la_coleccion"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </com.google.android.material.card.MaterialCardView>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>

